--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Pi extension that adds structural file maps for large files",
   "type": "module",
   "pi": {
-    "extensions": ["./src/index.ts"]
+    "extensions": [
+      "./src/index.ts"
+    ]
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
@@ -19,23 +21,31 @@
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
     "bench": "vitest bench"
   },
-  "keywords": ["pi", "extension", "read", "file-map"],
+  "keywords": [
+    "pi",
+    "extension",
+    "read",
+    "file-map"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ts-morph": "^24.0.0",
-    "tree-sitter": "0.21.1",
-    "tree-sitter-cpp": "0.22.3",
-    "tree-sitter-rust": "0.23.1"
+    "tree-sitter": "0.22.4",
+    "tree-sitter-cpp": "0.23.4",
+    "tree-sitter-rust": "0.23.3",
+    "ts-morph": "27.0.2"
   },
   "devDependencies": {
+    "@factory/eslint-plugin": "^0.1.0",
     "@mariozechner/pi-coding-agent": "^0.52.9",
     "@sinclair/typebox": "^0.34.0",
     "@types/node": "^22.0.0",
-    "typescript": "^5.7.0",
-    "vitest": "^3.0.0",
-    "ultracite": "^7.1.5",
     "oxfmt": "^0.28.0",
-    "@factory/eslint-plugin": "^0.1.0"
+    "typescript": "^5.7.0",
+    "ultracite": "^7.1.5",
+    "vitest": "^3.0.0"
+  },
+  "overrides": {
+    "tree-sitter": "$tree-sitter"
   }
 }
