Change license to MIT, add acknowledgments
- Switch from ISC to MIT license
- Add LICENSE file with Will Hampson copyright
- Credit kcosr/codemap as inspiration

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "file-map"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "tree-sitter": "0.22.4",
     "tree-sitter-cpp": "0.23.4",
