Prepare for npm publish
- Add pi-package keyword for discoverability
- Add author, repository, homepage, bugs fields
- Add .npmignore to exclude tests, demos, compiled binaries
- Update installation docs with pi install commands

--- a/package.json
+++ b/package.json
@@ -22,12 +22,22 @@
     "bench": "vitest bench"
   },
   "keywords": [
+    "pi-package",
     "pi",
     "extension",
     "read",
-    "file-map"
+    "file-map",
+    "code-navigation"
   ],
-  "author": "",
+  "author": "Will Hampson",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Whamp/pi-read-map"
+  },
+  "homepage": "https://github.com/Whamp/pi-read-map#readme",
+  "bugs": {
+    "url": "https://github.com/Whamp/pi-read-map/issues"
+  },
   "license": "MIT",
   "dependencies": {
     "tree-sitter": "0.22.4",
