--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "knip": "^5.83.1",
     "lint-staged": "^16.2.7",
     "oxfmt": "^0.28.0",
+    "oxlint": "^1.46.0",
     "typescript": "^5.7.0",
     "ultracite": "^7.1.5",
     "vitest": "^3.0.0"
