feat(clojure): add tree-sitter Clojure mapper
Tree-sitter mapper for .clj, .cljs, .cljc, .edn files using
ghoseb/tree-sitter-clojure (fork with Node.js bindings).

Extracts: ns, defn, defn-, def, defonce, defmacro, defmulti,
defmethod, defprotocol (with method children), defrecord, deftype.

Handles docstrings, ^:private metadata, multi-arity functions,
reader conditionals (#?/#?@) for both top-level defs and ns imports.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "license": "MIT",
   "dependencies": {
     "tree-sitter": "0.22.4",
+    "tree-sitter-clojure": "github:ghoseb/tree-sitter-clojure",
     "tree-sitter-cpp": "0.23.4",
     "tree-sitter-rust": "0.23.3",
     "ts-morph": "27.0.2"
